--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,25 @@
         flex-direction: column;
         align-items:center;
     }
+     #shadow{
+    position: absolute;
+    top:50%;
+}
+
+#result{
+    position:absolute;
+    top:60%;
+}
+button{
+    position:absolute;
+    top:70%;
+    width:125px;
+    height:50px;
+    background-color: rgb(73, 136, 245);
+    color: white;
+    border-radius: 10%;
+    border-color: rgb(73, 136, 245);
+}
 }
 @media(min-width:412px) and ( max-width:1023px){
     .background{
