--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@
         flex-direction: column;
         align-items:center;
     }
+    #shadow{
+    position: absolute;
+    top:60%;
+}
 }
 @media(min-width:1024px) and ( max-width:1349px){
     .background{
@@ -54,17 +58,17 @@ button{
     }
     #shadow{
     position: absolute;
-    top:50%;
+    top:45%;
     
 }
 
 #result{
     position:absolute;
-    top:60%;
+    top:55%;
 }
 button{
     position:absolute;
-    top:70%;
+    top:65%;
     width:125px;
     height:50px;
     background-color: rgb(73, 136, 245);
