--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,9 @@
         display:flex;
         flex-direction: column;
         align-items:center;
+        align-content:space-between;
     }
-    #shadow{
-    position: absolute;
-    top:60%;
-}
+    
 }
 @media(min-width:1024px) and ( max-width:1349px){
     .background{
@@ -77,43 +75,4 @@ button{
     border-radius: 10%;
     border-color: rgb(73, 136, 245);
 }
-}
-h1{
-    position: relative;
-    top:45px;
-    font-family:'Inter';
-    font-weight:800;
-    font-size: 40px;
-    text-shadow: 2px 5px 0 black;
-}
-p{
-    position: relative;
-    top:60px;
-    font-family:'Inter';
-    font-weight:800;
-    
-
-}
-
-#coin{
-    position: absolute;
-    top: 30%;
-}
-#shadow{
-    position: absolute;
-    top: 60%;
-}
-#result{
-    position:absolute;
-    top:70%;
-}
-button{
-    position:absolute;
-    top:80%;
-    width:125px;
-    height:50px;
-    background-color: rgb(73, 136, 245);
-    color: white;
-    border-radius: 10%;
-    border-color: rgb(73, 136, 245);
 }
