--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,25 @@
         align-items:center;
         align-content:space-between;
     }
-    
+    #shadow{
+    position: absolute;
+    top: 60%;
+}
+#result{
+    position:absolute;
+    top:70%;
+}
+button{
+    position:absolute;
+    top:80%;
+    width:125px;
+    height:50px;
+    background-color: rgb(73, 136, 245);
+    color: white;
+    border-radius: 10%;
+    border-color: rgb(73, 136, 245);
+}
+
 }
 @media(min-width:1024px) and ( max-width:1349px){
     .background{
@@ -25,7 +43,7 @@
     }
      #shadow{
     position: absolute;
-    top:45%;
+    top:50%;
     
 }
 
@@ -57,7 +75,7 @@ button{
     }
     #shadow{
     position: absolute;
-    top:45%;
+    top:50%;
     
 }
 
