--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-@media(min-width:1350px){
-    .background{
+.background{
         background-color: rgb(50, 43, 77);
         color:white;
         width:100vw;
@@ -10,7 +9,7 @@
         align-items:center;
         align-content:space-between;
     }
-    #shadow{
+#shadow{
     position: absolute;
     top: 63%;
 }
@@ -28,75 +27,7 @@ button{
     border-radius: 10%;
     border-color: rgb(73, 136, 245);
 }
- #coin{
-    width:125px;
-    height:125px;
- }
-}
-@media(min-width:1024px) and ( max-width:1349px){
-    .background{
-        background-color: rgb(50, 43, 77);
-        color:white;
-        width:100vw;
-        position:relative;
-        height:100vh;
-        display:flex;
-        flex-direction: column;
-        align-items:center;
-    }
-     #shadow{
-    position: absolute;
-    top: 55%;
-}
-#result{
-    position:absolute;
-    top:70%;
-}
-button{
-    position:absolute;
-    top:80%;
-    width:125px;
-    height:50px;
-    background-color: rgb(73, 136, 245);
-    color: white;
-    border-radius: 10%;
-    border-color: rgb(73, 136, 245);
-}
-}
-
-
-@media(min-width:412px) and ( max-width:1023px){
-    .background{
-        background-color: rgb(50, 43, 77);
-        color:white;
-        width:100vw;
-        position:relative;
-        height:100vh;
-        display:flex;
-        flex-direction: column;
-        align-items:center;
-    }
-    #shadow{
-    position: absolute;
-    top:55%;
-    
-}
-
-#result{
-    position:absolute;
-    top:60%;
-}
-button{
-    position:absolute;
-    top:65%;
-    width:125px;
-    height:50px;
-    background-color: rgb(73, 136, 245);
-    color: white;
-    border-radius: 10%;
-    border-color: rgb(73, 136, 245);
-}
-}
+ 
 h1{
     position: relative;
     top:45px;
@@ -117,36 +48,6 @@ p{
 #coin{
     position: absolute;
     top: 30%;
+    flex-shrink:2;
 }
-/* Alternate classes*/
-.headingTwo{
-    position:relative;
-    top:22.5px;
 
-}
-.pTwo{
-    position: relative;
-    top:37.5px;
-    font-family:'Inter';
-    font-weight:800;
-    
-
-}
-.coinTwo{
-    position:absolute;
-    top:20%;
-    height:85px;
-    width:85px;
-}
-.shadowTwo{
-position:absolute;
-top:62%
-}
-.resultTwo{
-    position:absolute;
-    top:70%;
-}
-.buttonTwo{
-    position:absolute;
-    top:80%;
-}
