--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@
         display:flex;
         flex-direction: column;
         align-items:center;
+        min-width:100vw;
+        min-height:100vh;
     }
     h1{
     position: relative;
@@ -15,25 +17,26 @@
     font-weight:800;
     font-size: 40px;
     text-shadow: 2px 5px 0 black;
+   
 }
 p{
     position: relative;
     top:60px;
     font-family:'Inter';
     font-weight:800;
-    
+   
 
 }
 
     #coin{
     position: relative;
     top: 20%;
+    flex-shrink:2;
+    min-width:85px;
+    min-height:85px;
     
 }
-.altCoin{
-    height:85px;
-    width:85px;
-}
+
 #shadow{
     position: relative;
     top:30%;
