Added media queries

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,18 @@ button{
     border-color: rgb(73, 136, 245);
 }
  
-
+@media screen and(orientation:landscape)and(max-width:1000px){
+        #coin{
+            width: 85px;
+            height:85px;
+        }
+}
+@media screen and(orientation:landscape)and(min-width:1001px){
+        #coin{
+            width: 125px;
+            height:125px;
+        }
+}
 
 
 
